# itmo_llp_lab

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  ROADMAP.md  TODO.md  report.typ
.github/workflows/: cmake-multiarch.yml
benchmark/: CMakeLists.txt  main_benchmark.c  plot-results.py
include/: domain.h
include/document_db/: document.h  document_tree.h
include/document_tree/: document_tree.h
include/file/: file.h
include/file_manager/: file_manager.h
include/page/: page.h  page_manager.h
include/private/storage/: file.h  file_manager.h  page.h  page_manager.h  storage.h
include/public/document_db/: document.h  document_tree.h  node.h
include/public/storage/: file.h  file_manager.h  page.h  page_manager.h  storage.h
include/public/util/: error.h  helpers.h  log.h  result.h
include/storage/: file.h  file_manager.h  page.h  page_manager.h
include/util/: common.h  helpers.h  log.h  result.h
src/: main.c
src/document_db/: document.c
src/storage/: file.c  file_manager.c  files.c  page.c  page_manager.c  page_manager_free_pages.c  page_manager_iter.c  storage.c
src/storage/page/: page.c  util.c
src/storage/page_manager/: item_management.c  mem_management.c  page_manager.c  page_manager_internal.c  page_manager_iter.c  utils.c
test/: CMakeLists.txt
test/storage/: common.cpp  test_document.cpp  test_file.cpp  test_file_manager.cpp  test_page.cpp  test_page_manager.cpp
